--- a/chatter/templates/chatter/base.html
+++ b/chatter/templates/chatter/base.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">
+                <a class="navbar-item is-size-5 has-text-weight" href="/">
                     <strong>Chatter</strong>
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
