Enable content appearance by category

--- a/chatter/templates/chatter/base.html
+++ b/chatter/templates/chatter/base.html
@@ -47,10 +47,7 @@
                         Home
                     </a>
                     <a href="{% url 'about' %}" class="navbar-item is-size-5 has-text-weight-semibold">
-                        Examples
-                    </a>
-                    <a href="/" class="navbar-item is-size-5 has-text-weight-semibold">
-                        Features
+                        About
                     </a>
                 </div>
             </div>
