--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -9,7 +9,7 @@
                 <section class="section">
                     <div class="columns">
                         <div class="column is-8 is-offset-2">
-                            {% for post in category.posts.all %}
+                            {% for post in posts %}
                                 <div class="content is-medium">
                                     <a href="{% url 'post_detail' post.category.slug post.slug %}">
                                         <h2 class="subtitle is-4">{{ post.pub_date|date:'M. d, Y' }}</h2>
@@ -17,6 +17,10 @@
                                         <p>{{ post.intro }}</p>
                                     </a>
                                 </div>
+                            {% empty %}
+                                <div class="content">
+                                    <p>There are no posts in this category...</p>
+                                </div>    
                             {% endfor %}
                         </div>
                     </div>
